--- a/tools/csv2json.ipynb
+++ b/tools/csv2json.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -24,7 +24,7 @@
     "    # Replace special negative sign if present and convert to float\n",
     "    return float(value.replace('−', '-').replace(',', ''))\n",
     "\n",
-    "with open('LOPE_PLACES_CLEAN.csv', encoding='utf-8') as f:\n",
+    "with open('NER_LOPE_CLEAN.csv', encoding='utf-8') as f:\n",
     "    csv_file = csv.reader(f)  # We parse the CSV file\n",
     "    next(csv_file)  # We skip the first line\n",
     "\n",
